--- a/Ex01/ex01.css
+++ b/Ex01/ex01.css
@@ -17,12 +17,16 @@ body {
         flex-direction: column;
     }
 
+    img {
+        width: 450px;
+    }
+
     .login {
-    text-align: center;
-    width: 411.16px;
-    height: 478.53px;
-    border-radius: 50px;
-    background-color: white;
+        width: 411.16px;
+        height: 478.53px;
+        border-radius: 50px;
+        margin-left: 16px;
+        background-color: white;
     }
 }
 
@@ -54,6 +58,10 @@ body {
     border-radius: 10px;
     margin-left: 20px;
     background-color: black;
+    color: white;
+    border: none;
+    padding-left: 10px;
+    font-size: 14px;
 }
 
 .senha_p {
@@ -70,6 +78,10 @@ body {
     border-radius: 10px;
     margin-left: 20px;
     background-color: black;
+    color: white;
+    border: none;
+    padding-left: 10px;
+    font-size: 14px;
 }
 
 .submit_login {
@@ -79,11 +91,22 @@ body {
     margin-left: 120px;
     margin-top: 50px;
     background-color: black;
+    color: white;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.1s ease, box-shadow 0.1s ease;
+}
+
+.submit_login:active {
+    transform: translateY(4px);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .submit_p {
     font-family: sans-serif;
-    color: white;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 15px;
 }
