--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
+    text-align: center;
 }
 
 em {
@@ -8,27 +9,46 @@ em {
 }
 
 img {
-    width: 300px;
+    width: 25rem;
+    height: 13rem;
 }
 
-li {
+.imagem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+
+
+a {
     color: white;
-    padding-top: 20px;
+    padding-top: 50px;
+    text-decoration: none;
+    font-size: 1.6rem;
 }
 
-.container {
+.container ul {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 40px;
-
+    list-style-type: none; 
+    padding: 0;
+    margin: 0;
 }
 
-.listas {
-    width: 300px;
-    height: 300px;
-    border-radius: 40px;
-    background-color: rgb(43, 0, 255);
+
+.exercicio_01, .exercicio_02, .exercicio_03 {
+    display: flex;
+    flex-direction: row;
+    border-radius: 2rem;
+    justify-content: center;
+    width: 20rem;    
+    height: 8rem;
+    background-color: blue;
 }
+
 
 @media(max-width: 450px) {
     .container{
