--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a {
 }
 
 
-.exercicio_01, .exercicio_02, .exercicio_03 {
+.exercicio_01, .exercicio_02, .exercicio_03, .exercicio_04 {
     display: flex;
     flex-direction: row;
     border-radius: 2rem;
