--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
@@ -32,6 +34,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 40px;
     list-style-type: none; 
     padding: 0;
@@ -39,7 +42,7 @@ a {
 }
 
 
-.exercicio_01, .exercicio_02, .exercicio_03, .exercicio_04 {
+.exercicio_01, .exercicio_02, .exercicio_03, .exercicio_04, .exercicio_05 {
     display: flex;
     flex-direction: row;
     border-radius: 2rem;
