--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
 }
 
 
-.exercicio_01, .exercicio_02, .exercicio_03, .exercicio_04, .exercicio_05, .exercicio_06, .exercicio_07 {
+.exercicio_01, .exercicio_02, .exercicio_03, .exercicio_04, .exercicio_05, .exercicio_06, .exercicio_07, .exercicio_08 {
     display: flex;
     flex-direction: row;
     border-radius: 2rem;
