--- a/Ex12/style.css
+++ b/Ex12/style.css
@@ -70,6 +70,11 @@ input[type="number"] {
     cursor: pointer;
     font-size: 16px;
     transition: background 0.3s ease;
+    
+}
+
+button:active {
+    transform: scale(0.9);
 }
  
 button:hover {
