--- a/Ex12/style.css
+++ b/Ex12/style.css
@@ -63,24 +63,23 @@ input[type="number"] {
 .botoes button {
     width: 100%;
     padding: 10px;
-    background: linear-gradient(45deg, #6a1b9a, #8e24aa);
+    background: linear-gradient(45deg, #1eff00, #51ff00);
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     transition: background 0.3s ease;
-    
+}
+
+button:hover {
+    transform: scale(1.1);
 }
 
 button:active {
     transform: scale(0.9);
 }
- 
-button:hover {
-    background: linear-gradient(45deg, #8e24aa, #6a1b9a);
-}
- 
+
 #dados-exibidos {
     background-color: #eeecec;
     display: flex;
@@ -102,6 +101,11 @@ h3, p {
 #dados-email, #dados-telefone{
     display: flex;
     gap: 8px;
+}
+
+p {
+    color: black;
+    padding: 6px;
 }
  
 @media (max-width: 600px) {
